crates/jrsonnet-peg-parser/src/snapshots/jrsonnet_peg_parser__tests__reserved.snap
---
source: crates/jrsonnet-peg-parser/src/lib.rs
expression: "parsep(\"null\")"
---
Literal(
    Null,
) from virtual:<test>:0-4
