crates/jrsonnet-peg-parser/src/snapshots/jrsonnet_peg_parser__tests__slice.snap
---
source: crates/jrsonnet-peg-parser/src/lib.rs
expression: "parsep(\"a[1:]\")"
---
Slice(
    Slice {
        value: Var(
            "a",
        ) from virtual:<test>:0-1,
        slice: SliceDesc {
            start: Some(
                Num(
                    1.0,
                ) from virtual:<test>:2-3,
            ),
            end: None,
            step: None,
        },
    },
) from virtual:<test>:0-5
