crates/jrsonnet-peg-parser/src/snapshots/jrsonnet_peg_parser__tests__snapshots@comment_eof.jsonnet.snap
---
source: crates/jrsonnet-peg-parser/src/lib.rs
expression: v
input_file: crates/jrsonnet-peg-parser/src/tests/comment_eof.jsonnet
---
Obj(
    MemberList(
        ObjMembers {
            locals: [],
            asserts: [],
            fields: [
                FieldMember {
                    name: Fixed(
                        "a",
                    ) from virtual:<test>:1-2,
                    plus: false,
                    params: None,
                    visibility: Normal,
                    value: Num(
                        1.0,
                    ),
                },
            ],
        },
    ),
)
