crates/jrsonnet-peg-parser/src/snapshots/jrsonnet_peg_parser__tests__snapshots@empty_object.jsonnet.snap
---
source: crates/jrsonnet-peg-parser/src/lib.rs
expression: v
input_file: crates/jrsonnet-peg-parser/src/tests/empty_object.jsonnet
---
Obj(
    MemberList(
        ObjMembers {
            locals: [],
            asserts: [],
            fields: [],
        },
    ),
)
